--- a/C#/BeamNGModsUpdateChecker/frmMain.en-GB.resx
+++ b/C#/BeamNGModsUpdateChecker/frmMain.en-GB.resx
@@ -130,9 +130,6 @@
   <data name="columnHeader2.Text" xml:space="preserve">
     <value>Link</value>
   </data>
-  <data name="cmsThreadsMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>157, 104</value>
-  </data>
   <data name="tsmiLAddThread.Size" type="System.Drawing.Size, System.Drawing">
     <value>156, 22</value>
   </data>
@@ -163,89 +160,134 @@
   <data name="tsmiRemove.Text" xml:space="preserve">
     <value>Remove</value>
   </data>
-  <data name="файлToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>63, 20</value>
-  </data>
-  <data name="файлToolStripMenuItem.Text" xml:space="preserve">
-    <value>Threads</value>
+  <data name="cmsThreadsMenu.Size" type="System.Drawing.Size, System.Drawing">
+    <value>157, 104</value>
   </data>
   <data name="tsmiAddThreads.Size" type="System.Drawing.Size, System.Drawing">
-    <value>266, 22</value>
+    <value>254, 22</value>
   </data>
   <data name="tsmiAddThreads.Text" xml:space="preserve">
     <value>Add threads</value>
   </data>
   <data name="tsmiMarkAllRead.Size" type="System.Drawing.Size, System.Drawing">
-    <value>266, 22</value>
+    <value>254, 22</value>
   </data>
   <data name="tsmiMarkAllRead.Text" xml:space="preserve">
     <value>Mark all threads as read</value>
   </data>
   <data name="tsmiRemoveDuplicates.Size" type="System.Drawing.Size, System.Drawing">
-    <value>266, 22</value>
+    <value>254, 22</value>
   </data>
   <data name="tsmiRemoveDuplicates.Text" xml:space="preserve">
     <value>Removes duplicate of threads</value>
   </data>
   <data name="toolStripMenuItem7.Size" type="System.Drawing.Size, System.Drawing">
-    <value>263, 6</value>
+    <value>251, 6</value>
   </data>
   <data name="tsmiOpenAllUnread.Size" type="System.Drawing.Size, System.Drawing">
-    <value>266, 22</value>
+    <value>254, 22</value>
   </data>
   <data name="tsmiOpenAllUnread.Text" xml:space="preserve">
     <value>Open all unread threads in browser</value>
   </data>
   <data name="toolStripMenuItem6.Size" type="System.Drawing.Size, System.Drawing">
-    <value>263, 6</value>
+    <value>251, 6</value>
   </data>
   <data name="tsmiRefresh.Size" type="System.Drawing.Size, System.Drawing">
-    <value>266, 22</value>
+    <value>254, 22</value>
   </data>
   <data name="tsmiRefresh.Text" xml:space="preserve">
     <value>Check for updates</value>
   </data>
+  <data name="файлToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>58, 20</value>
+  </data>
+  <data name="файлToolStripMenuItem.Text" xml:space="preserve">
+    <value>Threads</value>
+  </data>
   <data name="tsmiOptions.Size" type="System.Drawing.Size, System.Drawing">
-    <value>61, 20</value>
+    <value>56, 20</value>
   </data>
   <data name="tsmiOptions.Text" xml:space="preserve">
     <value>Options</value>
   </data>
   <data name="языкLanguageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>72, 20</value>
+    <value>66, 20</value>
   </data>
   <data name="языкLanguageToolStripMenuItem.Text" xml:space="preserve">
     <value>Language</value>
   </data>
-  <data name="помощьToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>43, 20</value>
-  </data>
-  <data name="помощьToolStripMenuItem.Text" xml:space="preserve">
-    <value>Help</value>
-  </data>
   <data name="tsmiOfficialThread.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 22</value>
+    <value>153, 22</value>
   </data>
   <data name="tsmiOfficialThread.Text" xml:space="preserve">
     <value>Official thread</value>
   </data>
   <data name="tsmiRepository.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 22</value>
+    <value>153, 22</value>
   </data>
   <data name="tsmiRepository.Text" xml:space="preserve">
     <value>Repository</value>
   </data>
   <data name="toolStripMenuItem5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>146, 6</value>
+    <value>150, 6</value>
   </data>
   <data name="tsmiAbout.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 22</value>
+    <value>153, 22</value>
   </data>
   <data name="tsmiAbout.Text" xml:space="preserve">
     <value>About</value>
   </data>
+  <data name="помощьToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>40, 20</value>
+  </data>
+  <data name="помощьToolStripMenuItem.Text" xml:space="preserve">
+    <value>Help</value>
+  </data>
+  <data name="tsmiExpand.Size" type="System.Drawing.Size, System.Drawing">
+    <value>254, 22</value>
+  </data>
+  <data name="tsmiExpand.Text" xml:space="preserve">
+    <value>Expand</value>
+  </data>
+  <data name="toolStripMenuItem4.Size" type="System.Drawing.Size, System.Drawing">
+    <value>251, 6</value>
+  </data>
+  <data name="tsmiRefreshT.Size" type="System.Drawing.Size, System.Drawing">
+    <value>254, 22</value>
+  </data>
+  <data name="tsmiRefreshT.Text" xml:space="preserve">
+    <value>Check for updates</value>
+  </data>
+  <data name="toolStripMenuItem9.Size" type="System.Drawing.Size, System.Drawing">
+    <value>251, 6</value>
+  </data>
+  <data name="tsmiOpenAllUnreadTray.Size" type="System.Drawing.Size, System.Drawing">
+    <value>254, 22</value>
+  </data>
+  <data name="tsmiOpenAllUnreadTray.Text" xml:space="preserve">
+    <value>Open all unread threads in browser</value>
+  </data>
+  <data name="toolStripMenuItem8.Size" type="System.Drawing.Size, System.Drawing">
+    <value>251, 6</value>
+  </data>
+  <data name="добавитьТемыToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>254, 22</value>
+  </data>
+  <data name="добавитьТемыToolStripMenuItem.Text" xml:space="preserve">
+    <value>Add threads</value>
+  </data>
+  <data name="toolStripMenuItem2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>251, 6</value>
+  </data>
+  <data name="tsmiExit.Size" type="System.Drawing.Size, System.Drawing">
+    <value>254, 22</value>
+  </data>
+  <data name="tsmiExit.Text" xml:space="preserve">
+    <value>Exit</value>
+  </data>
   <data name="cmsTray.Size" type="System.Drawing.Size, System.Drawing">
-    <value>175, 104</value>
+    <value>255, 160</value>
   </data>
   <data name="niTray.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -2070,38 +2112,8 @@
   <data name="niTray.Text" xml:space="preserve">
     <value>Updates: 0</value>
   </data>
-  <data name="tsmiExpand.Size" type="System.Drawing.Size, System.Drawing">
-    <value>174, 22</value>
-  </data>
-  <data name="tsmiExpand.Text" xml:space="preserve">
-    <value>Expand</value>
-  </data>
-  <data name="toolStripMenuItem4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>171, 6</value>
-  </data>
-  <data name="tsmiRefreshT.Size" type="System.Drawing.Size, System.Drawing">
-    <value>174, 22</value>
-  </data>
-  <data name="tsmiRefreshT.Text" xml:space="preserve">
-    <value>Check for updates</value>
-  </data>
-  <data name="добавитьТемыToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>174, 22</value>
-  </data>
-  <data name="добавитьТемыToolStripMenuItem.Text" xml:space="preserve">
-    <value>Add threads</value>
-  </data>
-  <data name="toolStripMenuItem2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>171, 6</value>
-  </data>
-  <data name="tsmiExit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>174, 22</value>
-  </data>
-  <data name="tsmiExit.Text" xml:space="preserve">
-    <value>Exit</value>
-  </data>
   <data name="toolStripStatusLabel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>67, 17</value>
+    <value>60, 17</value>
   </data>
   <data name="toolStripStatusLabel1.Text" xml:space="preserve">
     <value>Updates: 0</value>
