--- a/C#/BeamNGModsUpdateChecker/frmMain.en-GB.resx
+++ b/C#/BeamNGModsUpdateChecker/frmMain.en-GB.resx
@@ -119,16 +119,19 @@
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 13</value>
+    <value>49, 13</value>
   </data>
   <data name="label1.Text" xml:space="preserve">
-    <value>List of threads:</value>
+    <value>Threads:</value>
   </data>
   <data name="columnHeader1.Text" xml:space="preserve">
     <value>Title</value>
   </data>
   <data name="columnHeader2.Text" xml:space="preserve">
     <value>Link</value>
+  </data>
+  <data name="cmsThreadsMenu.Size" type="System.Drawing.Size, System.Drawing">
+    <value>157, 104</value>
   </data>
   <data name="tsmiLAddThread.Size" type="System.Drawing.Size, System.Drawing">
     <value>156, 22</value>
@@ -160,8 +163,11 @@
   <data name="tsmiRemove.Text" xml:space="preserve">
     <value>Remove</value>
   </data>
-  <data name="cmsThreadsMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>157, 104</value>
+  <data name="файлToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>63, 20</value>
+  </data>
+  <data name="файлToolStripMenuItem.Text" xml:space="preserve">
+    <value>Threads</value>
   </data>
   <data name="tsmiAddThreads.Size" type="System.Drawing.Size, System.Drawing">
     <value>266, 22</value>
@@ -179,7 +185,7 @@
     <value>266, 22</value>
   </data>
   <data name="tsmiRemoveDuplicates.Text" xml:space="preserve">
-    <value>Removes duplicate of threads</value>
+    <value>Remove duplicate threads</value>
   </data>
   <data name="toolStripMenuItem7.Size" type="System.Drawing.Size, System.Drawing">
     <value>263, 6</value>
@@ -199,12 +205,6 @@
   <data name="tsmiRefresh.Text" xml:space="preserve">
     <value>Check for updates</value>
   </data>
-  <data name="файлToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>63, 20</value>
-  </data>
-  <data name="файлToolStripMenuItem.Text" xml:space="preserve">
-    <value>Threads</value>
-  </data>
   <data name="tsmiOptions.Size" type="System.Drawing.Size, System.Drawing">
     <value>61, 20</value>
   </data>
@@ -217,20 +217,11 @@
   <data name="языкLanguageToolStripMenuItem.Text" xml:space="preserve">
     <value>Language</value>
   </data>
-  <data name="tsmiRepository.Size" type="System.Drawing.Size, System.Drawing">
-    <value>131, 22</value>
+  <data name="englishToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 22</value>
   </data>
-  <data name="tsmiRepository.Text" xml:space="preserve">
-    <value>Repository</value>
-  </data>
-  <data name="toolStripMenuItem5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>128, 6</value>
-  </data>
-  <data name="tsmiAbout.Size" type="System.Drawing.Size, System.Drawing">
-    <value>131, 22</value>
-  </data>
-  <data name="tsmiAbout.Text" xml:space="preserve">
-    <value>About</value>
+  <data name="русскийToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 22</value>
   </data>
   <data name="помощьToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>43, 20</value>
@@ -238,47 +229,20 @@
   <data name="помощьToolStripMenuItem.Text" xml:space="preserve">
     <value>Help</value>
   </data>
-  <data name="tsmiExpand.Size" type="System.Drawing.Size, System.Drawing">
-    <value>266, 22</value>
+  <data name="tsmiRepository.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 22</value>
   </data>
-  <data name="tsmiExpand.Text" xml:space="preserve">
-    <value>Expand</value>
+  <data name="tsmiRepository.Text" xml:space="preserve">
+    <value>Repository</value>
   </data>
-  <data name="toolStripMenuItem4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>263, 6</value>
+  <data name="toolStripMenuItem5.Size" type="System.Drawing.Size, System.Drawing">
+    <value>149, 6</value>
   </data>
-  <data name="tsmiRefreshT.Size" type="System.Drawing.Size, System.Drawing">
-    <value>266, 22</value>
+  <data name="tsmiAbout.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 22</value>
   </data>
-  <data name="tsmiRefreshT.Text" xml:space="preserve">
-    <value>Check for updates</value>
-  </data>
-  <data name="toolStripMenuItem9.Size" type="System.Drawing.Size, System.Drawing">
-    <value>263, 6</value>
-  </data>
-  <data name="tsmiOpenAllUnreadTray.Size" type="System.Drawing.Size, System.Drawing">
-    <value>266, 22</value>
-  </data>
-  <data name="tsmiOpenAllUnreadTray.Text" xml:space="preserve">
-    <value>Open all unread threads in browser</value>
-  </data>
-  <data name="toolStripMenuItem8.Size" type="System.Drawing.Size, System.Drawing">
-    <value>263, 6</value>
-  </data>
-  <data name="добавитьТемыToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>266, 22</value>
-  </data>
-  <data name="добавитьТемыToolStripMenuItem.Text" xml:space="preserve">
-    <value>Add threads</value>
-  </data>
-  <data name="toolStripMenuItem2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>263, 6</value>
-  </data>
-  <data name="tsmiExit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>266, 22</value>
-  </data>
-  <data name="tsmiExit.Text" xml:space="preserve">
-    <value>Exit</value>
+  <data name="tsmiAbout.Text" xml:space="preserve">
+    <value>About</value>
   </data>
   <data name="cmsTray.Size" type="System.Drawing.Size, System.Drawing">
     <value>267, 138</value>
@@ -2106,6 +2070,48 @@
   <data name="niTray.Text" xml:space="preserve">
     <value>Updates: 0</value>
   </data>
+  <data name="tsmiExpand.Size" type="System.Drawing.Size, System.Drawing">
+    <value>266, 22</value>
+  </data>
+  <data name="tsmiExpand.Text" xml:space="preserve">
+    <value>Expand</value>
+  </data>
+  <data name="toolStripMenuItem4.Size" type="System.Drawing.Size, System.Drawing">
+    <value>263, 6</value>
+  </data>
+  <data name="tsmiRefreshT.Size" type="System.Drawing.Size, System.Drawing">
+    <value>266, 22</value>
+  </data>
+  <data name="tsmiRefreshT.Text" xml:space="preserve">
+    <value>Check for updates</value>
+  </data>
+  <data name="toolStripMenuItem9.Size" type="System.Drawing.Size, System.Drawing">
+    <value>263, 6</value>
+  </data>
+  <data name="tsmiOpenAllUnreadTray.Size" type="System.Drawing.Size, System.Drawing">
+    <value>266, 22</value>
+  </data>
+  <data name="tsmiOpenAllUnreadTray.Text" xml:space="preserve">
+    <value>Open all unread threads in browser</value>
+  </data>
+  <data name="toolStripMenuItem8.Size" type="System.Drawing.Size, System.Drawing">
+    <value>263, 6</value>
+  </data>
+  <data name="добавитьТемыToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>266, 22</value>
+  </data>
+  <data name="добавитьТемыToolStripMenuItem.Text" xml:space="preserve">
+    <value>Add threads</value>
+  </data>
+  <data name="toolStripMenuItem2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>263, 6</value>
+  </data>
+  <data name="tsmiExit.Size" type="System.Drawing.Size, System.Drawing">
+    <value>266, 22</value>
+  </data>
+  <data name="tsmiExit.Text" xml:space="preserve">
+    <value>Exit</value>
+  </data>
   <data name="toolStripStatusLabel1.Size" type="System.Drawing.Size, System.Drawing">
     <value>67, 17</value>
   </data>
@@ -2120,6 +2126,9 @@
   </data>
   <data name="label2.Text" xml:space="preserve">
     <value>Search:</value>
+  </data>
+  <data name="lblOnlyUnread.Location" type="System.Drawing.Point, System.Drawing">
+    <value>55, 34</value>
   </data>
   <data name="lblOnlyUnread.Size" type="System.Drawing.Size, System.Drawing">
     <value>92, 13</value>
