--- a/C#/BeamNGModsUpdateChecker/strings.en.resx
+++ b/C#/BeamNGModsUpdateChecker/strings.en.resx
@@ -126,6 +126,9 @@
   <data name="copyright" xml:space="preserve">
     <value>Author: Incognito.</value>
   </data>
+  <data name="deleteSelectedThreads" xml:space="preserve">
+    <value>Do you want to delete selected threads?</value>
+  </data>
   <data name="error" xml:space="preserve">
     <value>Error</value>
   </data>
